--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,8 +20,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/sneakers">Sneakers</a></li>
-          <li><a href="/about">About</a></li>
+          <li><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'sneaker-index' %}">Sneakers</a></li>
+          <li><a href="{% url 'sneaker-create' %}">Add Sneakers</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
         </ul>
       </nav>
     </header>
