--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -10,9 +10,15 @@
     src="{% static 'images/lace.svg' %}"
     alt="Text reads: SneakerHeads"
   />
-  <h1>
-    Ofcourse your a SneakerHead, if not you wouldnt be here!
-  </h1>
+</section>
+<section>
+  <form action="{% url 'home' %}" method="post" class="login">
+    <h1>Login</h1>
+    {% csrf_token %} {{ form.as_p }}
+    <input type="hidden" name="next" value="{{ next }}" />
+    <button type="submit" class="btn submit">Login</button>
+  </form>
 </section>
 
 {% endblock %}
+
